[package]
name = "rustgc"
version = "0.1.0"
authors = ["johnduimovich <jduimovich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3"

[features]
# no features by default
default = []
# dynamic_mem uses vectors vs arrays
dynamic_mem = []
